# SimpleCPU

./: CMakeLists.txt  CacheController.cpp  CacheController.h  DualCoreExclusiveHierarchy.cpp  DualCoreExclusiveHierarchy.h  Makefile  SimpleCPU.cpp  SimpleCPU.h  TraceRecorder.cpp  TraceRecorder.h  TraceReplayer.cpp  TraceReplayer.h  TraceReplayer.py  dump_trace.cpp  sampler.py  test_cpu.cpp  test_trace.cpp
pin/: makefile.rules  pintracerecorder.cpp
